--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
 jdk:
   - oraclejdk8
-script: mvn clean verify coveralls:report deploy --settings https://raw.githubusercontent.com/avojak/settings.xml/master/settings.xml
+sudo: false
+script: 
+  - curl https://raw.githubusercontent.com/avojak/settings.xml/master/settings.xml > ./settings.xml
+  - mvn clean verify coveralls:report deploy --settings ./settings.xml
