Removing deploy step

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,4 @@ jdk:
   - oraclejdk8
 sudo: false
 script: 
-  - wget https://raw.githubusercontent.com/avojak/settings.xml/master/settings.xml -O /tmp/settings.xml
-  - mvn clean verify coveralls:report deploy --settings /tmp/settings.xml
+  - mvn clean verify coveralls:report
