--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ jdk:
   - oraclejdk8
 sudo: false
 script: 
-  - mvn clean verify coveralls:report
+  - wget https://raw.githubusercontent.com/avojak/settings.xml/master/settings.xml -O /tmp/settings.xml
+  - mvn clean verify coveralls:report deploy --settings /tmp/settings.xml
