--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_script:
 script: mvn install coveralls:report
 after_success: 
 - wget https://raw.githubusercontent.com/avojak/settings.xml/master/settings.xml -O /tmp/settings.xml
-- mvn site deploy --settings /tmp/settings.xml
+- mvn site deploy site:deploy --settings /tmp/settings.xml
