--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,13 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-webdav-jackrabbit</artifactId>
+				<version>2.10</version>
+			</extension>
+		</extensions>
 	</build>
 	<reporting>
 		<plugins>
@@ -192,7 +199,7 @@
 		<site>
 			<name>TheDesertMonk Site</name>
 			<id>thedesertmonk-site</id>
-			<url>http://repo.thedesertmonk.com/artifactory/maven-site/</url>
+			<url>dav:http://repo.thedesertmonk.com/artifactory/maven-site/</url>
 		</site>
 	</distributionManagement>
 </project>
