--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,14 @@
 		</developer>
 	</developers>
 	<scm>
-		<url>https://github.com/avojak/swt-unit</url>
-		<connection>scm:git:https://avojak@github.com/swt-unit.git</connection>
-		<developerConnection>scm:git:https://avojak@github.com/swt-unit.git</developerConnection>
+		<url>https://github.com/avojak/${artifactId}</url>
+		<connection>scm:git:https://avojak@github.com/${artifactId}.git</connection>
+		<developerConnection>scm:git:https://avojak@github.com/${artifactId}.git</developerConnection>
+		<tag>HEAD</tag>
 	</scm>
 	<ciManagement>
 		<system>travis</system>
-		<url>https://travis-ci.org/avojak/swt-unit</url>
+		<url>https://travis-ci.org/avojak/${artifactId}</url>
 	</ciManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -193,13 +194,6 @@
 				</executions>
 			</plugin>
 		</plugins>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-webdav-jackrabbit</artifactId>
-				<version>2.10</version>
-			</extension>
-		</extensions>
 	</build>
 	<reporting>
 		<plugins>
@@ -237,7 +231,7 @@
 		<site>
 			<name>TheDesertMonk Site</name>
 			<id>thedesertmonk-site</id>
-			<url>dav:http://repo.thedesertmonk.com/artifactory/maven-site/</url>
+			<url>http://repo.thedesertmonk.com/artifactory/maven-site/</url>
 		</site>
 	</distributionManagement>
 </project>
