--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.thedesertmonk.util</groupId>
 	<artifactId>swt-unit</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>swt-unit</name>
 	<description>SWT unit testing utilities</description>
@@ -16,14 +16,14 @@
 		</developer>
 	</developers>
 	<scm>
-		<url>https://github.com/avojak/${artifactId}</url>
-		<connection>scm:git:https://avojak@github.com/${artifactId}.git</connection>
-		<developerConnection>scm:git:https://avojak@github.com/${artifactId}.git</developerConnection>
+		<url>https://github.com/avojak/swt-unit</url>
+		<connection>scm:git:https://avojak@github.com/swt-unit.git</connection>
+		<developerConnection>scm:git:https://avojak@github.com/swt-unit.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 	<ciManagement>
 		<system>travis</system>
-		<url>https://travis-ci.org/avojak/${artifactId}</url>
+		<url>https://travis-ci.org/avojak/swt-unit</url>
 	</ciManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>19.0</version>
+			<version>21.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.swt</groupId>
@@ -157,6 +157,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>3.0.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -169,6 +170,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.0</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -183,6 +185,7 @@
 				<!-- explicitly define maven-deploy-plugin after other to force exec 
 					order -->
 				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
 				<executions>
 					<execution>
 						<id>deploy</id>
@@ -219,14 +222,14 @@
 	</repositories>
 	<distributionManagement>
 		<snapshotRepository>
-			<name>TheDesertMonk Snapshot</name>
-			<id>thedesertmonk-snapshot</id>
-			<url>http://repo.thedesertmonk.com/artifactory/maven-snapshot/</url>
-		</snapshotRepository>
-		<repository>
-			<name>TheDesertMonk Release</name>
-			<id>thedesertmonk-release</id>
-			<url>http://repo.thedesertmonk.com/artifactory/maven-release/</url>
-		</repository>
+            <id>ossrh</id>
+            <name>OSSRH Snapshot Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <name>OSSRH Staging Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
 	</distributionManagement>
 </project>
